# egui_midi_editor

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
docs/: embedding.md
egui_file_tree/: Cargo.toml
egui_file_tree/src/: lib.rs  tree.rs
egui_midi/: Cargo.toml
egui_midi/src/: audio.rs  editor.rs  lib.rs  structure.rs
egui_midi/src/ui/: mod.rs
egui_track/: Cargo.toml  README.md
egui_track/src/: editor.rs  lib.rs  project.rs  structure.rs  utils.rs
egui_track/src/ui/: clip.rs  mod.rs  renderer.rs  statusbar.rs  timeline.rs  toolbar.rs  track_lane.rs
egui_track_example/: Cargo.toml
egui_track_example/src/: main.rs
example_app/: Cargo.toml
example_app/src/: main.rs
file_tree_example/: Cargo.toml
file_tree_example/src/: main.rs
midi_track_file_example/: Cargo.toml
midi_track_file_example/src/: clip_operations.rs  main.rs  midiclip.rs  playback.rs  project.rs  ui.rs
midi_track_file_example/src/audio/: mixer.rs  mod.rs  sine_synth.rs  track_audio_engine.rs
