[package]
name = "example_app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30"
eframe = "0.30"
egui_midi = { path = "../egui_midi" }
rodio = "0.20" # Latest stable as of knowledge cutoff, checking versions is good practice but I'll stick to safe bets or check later if build fails. 
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.10"
rfd = "0.13"
midly = "0.5"
